crates/sui-prover/tests/snapshots/spec_well_formed/spec_well_formed_params_attr.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
snapshot_kind: text
---
exiting with bytecode transformation errors
warning: unused variable
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_params_attr.move:15:21
   │
15 │ public fun foo_spec(x: u64): u64 {
   │                     ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: Underlying func input var is not a function parameter
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_params_attr.move:15:1
   │  
15 │ ╭ public fun foo_spec(x: u64): u64 {
16 │ │   let d = 5u64;
17 │ │   let result = foo(d);
18 │ │ 
   · │
21 │ │   result
22 │ │ }
   │ ╰─^
